Fixed loading symbol and updated date column on shift table

--- a/src/app/staff/shifts/shift-view/list/list.component.scss
+++ b/src/app/staff/shifts/shift-view/list/list.component.scss
@@ -12,3 +12,14 @@ table {
         margin-left: 1em;
     }
 }
+
+#spinnerContainer {
+    width: 100%;
+    clear: both;
+    padding-top: 10rem;
+    overflow-y: hidden;
+    
+    mat-spinner {
+        margin: auto;
+    }
+}
