--- a/src/app/staff/shifts/shift-view/shift-view.component.scss
+++ b/src/app/staff/shifts/shift-view/shift-view.component.scss
@@ -9,14 +9,3 @@
     clear: both;
     width: 100%;
 }
-
-#spinnerContainer {
-    width: 100%;
-    clear: both;
-    padding-top: 10rem;
-    overflow-y: hidden;
-    
-    mat-spinner {
-        margin: auto;
-    }
-}
